--- a/style.css
+++ b/style.css
@@ -27,10 +27,27 @@ MENU
   color: white;
   cursor: pointer;
   margin-left: 30px;
+  position: relative;
 }
 
-.menu a:hover{
-  text-decoration: underline;
+.menu a::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  
+  width: 100%;
+  height: 3px;
+  background-color: white;
+
+  transform-origin: right;
+  transition: transform .7s ease-in-out;
+  transform: scaleX(0);
+}
+
+.menu a:hover::after{
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 /*
@@ -125,10 +142,12 @@ BUTTONS
 
 .btn-left:hover{
   background-color: hsl(0, 0%, 27%);
+  transition: all 0.5s;
 }
 
 .btn-right:hover{
   background-color: hsl(0, 0%, 27%);
+  transition: all 0.5s;
 }
 
 /*
